[gd_scene load_steps=4 format=3 uid="uid://qxv71o0hpv1l"]

[ext_resource type="Script" uid="uid://c4exta34axcn2" path="res://UI/Inventory/InventoryUI.gd" id="1_8o2ir"]
[ext_resource type="Texture2D" uid="uid://bd02lmwhjw1nl" path="res://Assets/Items/chest.png" id="2_tesbg"]
[ext_resource type="Texture2D" uid="uid://ddihmepsuse00" path="res://Assets/Items/chest_open.png" id="3_4r67x"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_8o2ir")
sprite_close = ExtResource("2_tesbg")
sprite_open = ExtResource("3_4r67x")

[node name="InventoryUI" type="Control" parent="."]
layout_mode = 3
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -960.0
offset_top = -40.0
offset_right = -920.0
grow_vertical = 0

[node name="Open_Close" type="TextureButton" parent="InventoryUI"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -163.0
offset_right = 222.0
grow_vertical = 0
texture_normal = ExtResource("2_tesbg")

[node name="Slots_container" type="GridContainer" parent="InventoryUI"]
layout_mode = 0
offset_left = 264.0
offset_top = -78.0
offset_right = 566.0
offset_bottom = 12.0

[node name="Slot_1" type="TextureButton" parent="InventoryUI/Slots_container"]
layout_mode = 2

[node name="Slot_2" type="TextureButton" parent="InventoryUI/Slots_container"]
layout_mode = 2

[node name="Slot_3" type="TextureButton" parent="InventoryUI/Slots_container"]
layout_mode = 2

[node name="Slot_4" type="TextureButton" parent="InventoryUI/Slots_container"]
layout_mode = 2

[node name="Slot_5" type="TextureButton" parent="InventoryUI/Slots_container"]
layout_mode = 2

[node name="Slot_6" type="TextureButton" parent="InventoryUI/Slots_container"]
layout_mode = 2

[connection signal="toggled" from="InventoryUI/Open_Close" to="." method="_on_open_close_toggled"]
